Fix static pathing

--- a/src/backend/templates/base.html
+++ b/src/backend/templates/base.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        {% vite_hmr_client %} {% vite_asset 'js/main.js' %} {% vite_react_refresh %}
+        {% vite_hmr_client %} {% vite_asset "main.js" %} {% vite_react_refresh %}
 
         <title>Django Vite Example</title>
     </head>
