--- a/src/backend/templates/base.html
+++ b/src/backend/templates/base.html
@@ -6,13 +6,12 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Music Audiolyser</title>
 
-        {% vite_hmr_client %} {% vite_asset "main.js" %} {% vite_react_refresh %}
-
-        <title>Django Vite Example</title>
+        {% vite_hmr_client %} {% vite_react_refresh %}
     </head>
-
     <body>
-        <h1>Django Vite Example !</h1>
+        <div id="root"></div>
+        {% vite_asset "src/main.tsx" %}
     </body>
 </html>
